fixed notification alignment

--- a/styles.css
+++ b/styles.css
@@ -488,7 +488,7 @@ footer {
 #message {
   position: absolute;
   top: 390px;
-  left: 150px;
+  left: 120px;
   font-size: 14px;
 }
 
